# django-json-subfields

./: .envrc  .gitignore  README.md  pyproject.toml
django_json_subfields/: __init__.py
tests/: conftest.py  models.py  test_simple.py
